--- a/src/app/authpages/style.css
+++ b/src/app/authpages/style.css
@@ -80,12 +80,83 @@
 .authwrapper .right_form_wrapper .form_wrap .auth_form .input_wrap.text-right a {
     text-decoration: none;
 }
-
-.custom-makakao-form-error{
-    color: red !important;
-    font-size: 14px !important;
-    line-height: 17px !important;
+.authwrapper .right_form_wrapper .form_wrap .select-seller-type p {
+    color: #3D3D3D;
+    font-size: 20px;
+    font-weight: 600;
 }
+.authwrapper .right_form_wrapper .form_wrap .select-seller-type .seller-type {
+    display: flex;
+    justify-content: space-between;
+    gap: 15px;
+}
+.authwrapper .right_form_wrapper .form_wrap .select-seller-type .seller-type .seller-type-item {
+    width: 100%;
+    min-height: 140px;
+    position: relative;
+}
+.authwrapper .right_form_wrapper .form_wrap .select-seller-type .seller-type .seller-type-item label {
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    border: solid 2px #EAEAEA;
+    border-radius: 12px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+    transition: all .2s;
+    gap: 5px;
+    font-size: 17px;
+    color: #3D3D3D;
+}
+.authwrapper .right_form_wrapper .form_wrap .select-seller-type .seller-type .seller-type-item label .check_icon {
+    position: absolute;
+    top: 3px;
+    right: 5px;
+    transition: all .2s;
+    transform: scale(0);
+}
+.authwrapper .right_form_wrapper .form_wrap .select-seller-type .seller-type .seller-type-item input {
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+    opacity: 0;
+    cursor: pointer;
+}
+.authwrapper .right_form_wrapper .form_wrap .select-seller-type .seller-type .seller-type-item input:checked+label {
+    border-color: #4285F4;
+}
+.authwrapper .right_form_wrapper .form_wrap .select-seller-type .seller-type .seller-type-item input:checked+label .check_icon {
+    transform: scale(1);
+}
+.authwrapper .right_form_wrapper .form_wrap .select-seller-type .seller-type .seller-type-item input:checked+label .seller-icon svg path {
+    stroke: #4285F4;
+}
+.authwrapper .right_form_wrapper .form_wrap .select-seller-type .seller-type .seller-type-item input#seller-type-2:checked+label .seller-icon svg path {
+    stroke: #4285F4;
+    fill: #4285F4;
+}
+.authwrapper .right_form_wrapper .form_wrap .select-seller-type .seller-type .seller-type-item input:checked+label {
+    color: #4285F4;
+}
+.authwrapper .right_form_wrapper .form_wrap .select-seller-type {
+    margin: 0 0 40px 0;
+}
+.authwrapper .right_form_wrapper .form_wrap label.form-label {
+    display: block;
+    text-align: left;
+    margin: 0 0 3px 0;
+    color: #3D3D3D;
+}
+
+
 
 @media (max-width: 767px){
     .authwrapper .left_panel {
@@ -116,4 +187,10 @@
     .authwrapper .right_form_wrapper .form_wrap .auth_form .input_wrap.text-right a {
         font-size: 14px;
     }
+}
+
+.custom-makakao-form-error{
+    color: red !important;
+    font-size: 14px !important;
+    line-height: 17px !important;
 }
