--- a/src/app/pages/sellers/style.css
+++ b/src/app/pages/sellers/style.css
@@ -114,6 +114,10 @@ table.table tr td .product_action.accept_product {
     background: #34A853;
     color: #fff;
 }
+table.table tr td .product_action.pending_product {
+    background: #FBBC05;
+    color: #fff;
+}
 .product_detais_modal .title_and_price {
     display: flex;
     align-items: center;
@@ -180,11 +184,11 @@ table.table tr td .product_action.accept_product {
 }
 .product_filter .search_and_create_categories input.input_text_box {
     border-radius: 6px;
-    height: 39px;
+    height: 50px;
     font-size: 14px;
 }
 .product_filter .search_and_create_categories svg {
-    top: 10px;
+    top: 16px;
     width: 16px;
 }
 .product_filter {
