seller user type login signup and layout setup with route protection

--- a/src/app/authpages/style.css
+++ b/src/app/authpages/style.css
@@ -193,4 +193,5 @@
     color: red !important;
     font-size: 14px !important;
     line-height: 17px !important;
+    text-align: left !important;
 }
